--- a/photobooth/gui/Qt5Gui/stylesheets/dark-800x600.qss
+++ b/photobooth/gui/Qt5Gui/stylesheets/dark-800x600.qss
@@ -71,6 +71,17 @@ QFrame#GreeterMessage QPushButton#button {
     min-height: 100px;
     padding: 0;
     text-align: center;
+    color: rgba(255, 27, 0, 200);
+}
+
+QFrame#GreeterMessage QPushButton#color_button {
+    border: none;
+    font-size: 80px;
+    margin: 0;
+    min-height: 100px;
+    padding: 0;
+    text-align: center;
+    color: rgba(0, 0, 255, 200);
 }
 
 QFrame#GreeterMessage QLabel#message {
